# Resume-Parser

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
