[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Resume-Parser"
version = "0.0.1"
requires-python = ">=3.10"
authors = [{name = "Gujuri Alekha", email = "gujurialekha@gmail.com"}]
maintainers = [{name = "Gujuri Alekha", email = "gujurialekha@gmail.com"}]
dependencies = [
    "PyPDF2==3.0.1",
    "packaging==24.2",
    "setuptools==75.8.2",
    "setuptools-scm==8.2.0"
]

[project.urls]
Repository = "https://github.com/alekha1234/Resume-Parser"